WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
113415
margin-bottom ignored, causing simple page to render different than IE or Firefox
https://bugs.webkit.org/show_bug.cgi?id=113415
Summary
margin-bottom ignored, causing simple page to render different than IE or Fir...
asefkow
Reported
2013-03-27 09:03:02 PDT
Created
attachment 195336
[details]
Testcase 1) Run the attachmenet on Safari, Chrome, or nightly Webkit build. 2) Shrink the browser window so there is a vertical scrollbar 3) Notice there is no margin-bottom like there is margin-top. -compare to Firefox and IE, both which allocate space for margin-bottom.
Attachments
Testcase
(548 bytes, text/html)
2013-03-27 09:03 PDT
,
asefkow
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-03-28 11:19:28 PDT
This may be about margin collapsing. It's a margin on an element which is a child of an abspos div.
Ahmad Saleem
Comment 2
2022-08-06 18:36:29 PDT
I am able to reproduce this bug using attached test case in Safari 15.6 on macOS 12.5 and if you scroll, you don't get "bottom" margin and it is also present in Chrome Canary 106 while Firefox Nightly 105 do show bottom-margin / white space below yellow block. I am going to mark this as "New". Thanks!
Radar WebKit Bug Importer
Comment 3
2022-08-08 11:23:29 PDT
<
rdar://problem/98331149
>
Ahmad Saleem
Comment 4
2022-09-23 08:37:23 PDT
This commit mentions about this Webkit bug:
https://src.chromium.org/viewvc/blink?view=revision&revision=164882
Ahmad Saleem
Comment 5
2023-03-20 12:21:08 PDT
I test all attached tests from Blink's mentioned commit in
Comment 04
and also attached but all of them are matching Chrome Canary 113 while Firefox Nightly 113 add "margin-bottom". I am not sure on web-spec part but this is what the behavior is of Safari / WebKit in STP165. @Alan - do we need to do behavior of "Firefox" or matching Chrome is fine? Chrome Test in JSFiddle -
https://jsfiddle.net/e48uyac6/show
&
https://jsfiddle.net/r5hbcLfu/show
Ahmad Saleem
Comment 6
2023-03-23 14:16:26 PDT
(In reply to Ahmad Saleem from
comment #4
)
> This commit mentions about this Webkit bug: > >
https://src.chromium.org/viewvc/blink?view=revision&revision=164882
NOTE - this has bug where RenderBox.cpp changes were reverted in following commit:
https://chromium.googlesource.com/chromium/src.git/+/8f19da697b269b531791101e30a3ef1974c335b4
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug